fix(labler.yaml): fix indent

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,17 +1,17 @@
 feature:
- - head-branch: ['^feat']
+  - head-branch: ["^feat"]
 
 chore:
- - head-branch: ['^chore']
+  - head-branch: ["^chore"]
 
 web:
- - changed-files:
-  - any-glob-to-any-file: web/**
+  - changed-files:
+      - any-glob-to-any-file: web/**
 
 backend:
- - changed-files:
-  - any-glob-to-any-file: ['helper/**', 'src/**']
+  - changed-files:
+      - any-glob-to-any-file: ["helper/**", "src/**"]
 
 documentation:
   - changed-files:
-   - any-glob-to-any-file: ['README.md', 'docs/**']
+      - any-glob-to-any-file: ["README.md", "docs/**"]
