chore: update issue templates (#18)

--- a/.github/ISSUE_TEMPLATE/feature.yaml
+++ b/.github/ISSUE_TEMPLATE/feature.yaml
@@ -1,5 +1,6 @@
 name: Feature request
 description: Request a new feature!
+labels: [feature, enhancement]
 body:
     - type: checkboxes
       attributes:
