--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -6,6 +6,7 @@ on:
 permissions:
   contents: write
   issues: write
+  id-token: write
   pull-requests: write
 
 name: release-please
@@ -18,5 +19,4 @@ jobs:
         with:
           config-file: .github/release-please-config.json
           manifest-file: .github/release-please-manifest.json
-          token: ${{ secrets.RELEASE_PLEASE_PAT }}
           release-type: simple
