--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -21,3 +21,4 @@ jobs:
           manifest-file: .github/release-please-manifest.json
           token: ${{ secrets.GITHUB_TOKEN }}
           release-type: simple
+          always-bump-minor: true
